--- a/src/oomproject/First.form
+++ b/src/oomproject/First.form
@@ -169,6 +169,9 @@
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="initiateMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="log">
           <Properties>
