--- a/src/oomproject/Configure.form
+++ b/src/oomproject/Configure.form
@@ -53,7 +53,7 @@
                   <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="weightLabel1" min="-2" pref="262" max="-2" attributes="0"/>
+                          <Component id="weightLabel1" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                           <Component id="mail" max="32767" attributes="0"/>
                       </Group>
@@ -62,13 +62,13 @@
                           <Component id="validateNo" min="-2" pref="520" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="peopleLabel" min="-2" pref="355" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="peopleLabel" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
                           <Component id="people" min="-2" pref="84" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="weightLabel" min="-2" pref="329" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="weightLabel" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
                           <Component id="weight" min="-2" pref="84" max="-2" attributes="0"/>
                       </Group>
                   </Group>
