build with jdk 15

--- a/src/oomproject/Configure.form
+++ b/src/oomproject/Configure.form
@@ -426,6 +426,7 @@
             <Property name="text" type="java.lang.String" value="800"/>
           </Properties>
           <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="weightKeyPressed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="weightKeyReleased"/>
           </Events>
         </Component>
@@ -494,6 +495,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="mailKeyPressed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="mailKeyReleased"/>
           </Events>
         </Component>
